matrix/mas/deployment-mas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mas
  namespace: matrix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      k8s-app: mas
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: mas
      name: mas
    spec:
      containers:
        - name: mas
          image: ghcr.io/element-hq/matrix-authentication-service:1.26.0
          imagePullPolicy: Always
          args:
            - server
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /config
              name: mas-cfg
            - mountPath: /config/keys
              name: mas-keys
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
      volumes:
        - name: mas-cfg
          projected:
            sources:
              - configMap:
                  name: mas
                  items:
                    - key: config.yaml
                      path: config.yaml
              - secret:
                  name: mas
                  items:
                    - key: encryption
                      path: encryption_file
                    - key: hs_token
                      path: hs_token
                    - key: keycloak-client-secret
                      path: keycloak-client-secret
        - name: mas-keys
          secret:
            secretName: mas-keys
