matrix/mas/service-mas.yaml
apiVersion: v1
kind: Service
metadata:
  name: mas
  namespace: matrix
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    k8s-app: mas
  sessionAffinity: None
  type: ClusterIP
