matrix/mas/ingress-matrix-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 550m
  name: matrix-auth
  namespace: matrix
spec:
  ingressClassName: nginx
  rules:
    - host: matrix-auth.cloud.ak-online.be
      http:
        paths:
          - backend:
              service:
                name: mas
                port:
                  name: http
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - matrix-auth.cloud.ak-online.be
      secretName: matrix-auth-prod-ingress
